--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+body{
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.contentBox{
+    margin-top: 40px;;
+}
+
 #gridContainer{
     background-color: rgb(255, 255, 255);
     display: grid;
@@ -11,4 +23,9 @@
     border-width: 1px;
     height: 100%;
     width: 100%;
+}
+
+#mainContent{
+    justify-content: center;
+    display: flex;
 }
