--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body{
     align-content: center;
+    background-color: rgb(197, 192, 184);
     display: flex;
     justify-content: center;
     text-align: center;
@@ -21,6 +22,16 @@ body{
     width: 0px;
 }
 
+.colorSwatch{
+    border-color: rgb(0, 0, 0);
+    border-radius: 50%;
+    border-style: ridge;
+    color: rgb(0, 0, 0);
+    height: 50px;
+    margin-top: 15px;
+    width: 50px;
+}
+
 .contentBox{
     margin-top: 40px;
 }
@@ -32,28 +43,28 @@ body{
     justify-items: center;
 }
 
-.fauxButton, #pickerLabel{
+.fauxButton, .colorButton{
     align-items: center;
-    background-color: rgb(245, 237, 192);
-    border-color: rgb(170, 3, 3);
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
     border-radius: 30%;
     border-style: ridge;
     color: rgb(0, 0, 0);
     display: flex;
-    flex: 0;
+    flex: 0, 0, auto;
     height: 50px;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 25px;
     text-align: center;
     width: 100px;    
 }
 
-.fauxButton:hover, #pickerLabel:hover{
+.fauxButton:hover, .colorButton:hover{
     box-shadow: 0 5px 15px rgba(170, 3, 3, 0.7);
     scale: 1.2;   
 }
 
-#gridContainer{
+.gridContainer{
     background-color: rgb(145, 142, 142);
     border-color: rgb(170, 3, 3);
     border-style: solid;
@@ -66,7 +77,7 @@ body{
     width: 600px;
 }
 
-#gridContainer.gridActive{
+.gridContainer.gridActive{
     gap: 1px;
 }
 
@@ -76,21 +87,26 @@ body{
     width: 100%;
 }
 
-#gridSizeLabel{
+.gridSizeLabel{
     font-size: 2em;
 }
 
-#header{
+.header{
     font-size: 4em;
 }
 
-#leftBox, #rightBox{
+
+.leftBox{
+    justify-content: right;    
+}
+
+.leftBox, .rightBox{
+    align-items: center;
     display: flex;
-    justify-content: right;
     width: 25%;
 }
 
-#mainContent{
+.midBox{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,7 +117,11 @@ body{
     width: 100%;
 }
 
-#sizingElements{
+.rightBox{
+    justify-content: left;    
+}
+
+.sizingElements, .colorElements{
     align-items: center;
     border-color: black;
     border-radius: 10px;
@@ -109,7 +129,9 @@ body{
     border-width: 3px;
     display: flex;
     flex-direction: column;
+    height: 500px;
     justify-content: center;
     padding: 10px;
+    width: 150px;
 
 }
